ingress/route-websocket.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: websocket-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"

        ## CORS ##
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"

    ## WebSocket ##
    nginx.org/websocket-services: "article-service-service"
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'

spec:
  ingressClassName: nginx 
  rules:
    - http:
        paths:
          - path: /ws
            pathType: Exact
            backend:
              service:
                name: article-service-service
                port:
                  number: 80
